# rundeck

./: .travis.yml  Cargo.toml  README.md
api/: Cargo.toml
api/src/: client.rs  error.rs  job.rs  lib.rs  project.rs  token.rs
ci/: before_deploy.sh  coverall.sh  install.sh  run.sh  script.sh
cli/: Cargo.toml
cli/src/: cli.yml  execution.rs  job.rs  main.rs  project.rs  tokens.rs
cli/src/commands/: auth.rs  job.rs  mod.rs  project.rs  run.rs  token.rs
cli/tests/: integration.rs  integration_auth.rs  integration_run.rs
extras/: _rundeck  rundeck-completion.bash
src/: cli.yml  execution.rs  job.rs  main.rs  project.rs
src/api/: mod.rs  project.rs
tests/: list_command.rs  server.rs
