[package]
name = "rundeck"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
description ="Rundeck (CLI) is a Command Line Interface which aim to solve a lack of tools to directly interact with a Rundeck instance."
repository = "https://github.com/Freyskeyd/Rundeck"
readme= "README.md"
keywords= ["rundeck", "cli", "interface"]
categories= ["command-line-utilities", "development-tools"]
license= "MIT"

[dependencies]
clap = { version = "*", features = ["yaml"] }
reqwest = "^0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
prettytable-rs = "^0.6"
dialoguer = "0.1.0"
rundeck-api = "0.1.0"
error-chain = "*"
fern = "0.4.3"
log = "0.3"

[dev-dependencies]
mockito = "0.8.2"
assert_cli = "*"
environment = "*"
